2022-09-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/assert.h,
	  device/include/ctype.h,
	  device/include/limits.h,
	  device/include/stdarg.h:
	  Replace include guards by C23 header version macros.

2022-09-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peep.c:
	  Improve handling of iyl, iyh in peephole rules, based on patch by Job Bolle.

2022-09-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peep.c:
	  Handling of immediates in canAssign for z80 and related.

2022-09-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/peeph.def: fixed rules 85a, 85b to fix bug #3486,
	  Thanks Job Bolle

2022-09-19 Felix Salfelder <felix AT salfelder.org>

	* src/SDCCmain.c:
	  Pass -xc to preprocessor, overriding file-type-by-extension magic.

2022-09-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c: applied patch #439,
	    also applied patch from bug #3485, Thanks Mark Symonds,
	    also cleaned up many whitespace irregularities

2022-09-17 Felix Salfelder <felix AT salfelder.org>

	* support/regression/MakeList,
	  support/regression/tcc/83_utf8_in_identifiers.c:
	  Revive erroneously disabled utf8 test.

2022-09-13 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/ds390/gen.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c:
	  struct / union parameters on the stack for ds390, copied from mcs51.

2022-09-13 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/{system,double-int}.h:
	  Remove wrong/unneeded gmp use.

2022-09-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/tinibios.h,
	  device/lib/ds390/tinibios.c,
	  device/lib/ds400/tinibios.c:
	  Provide function prototypes for tinybios.

2022-09-11 Benedikt Freisen <b.freisen AT gmx.net>
