@@ -26,14 +26,18 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
-#ifndef __SDC51_STDBOOL_H
-#define __SDC51_STDBOOL_H 1
+#ifndef __STDC_VERSION_STDBOOL_H__
+#define __STDC_VERSION_STDBOOL_H__ __STDC_VERSION__
 
-/* Define true and false of type _Bool in a way compatible with the preprocessor (see N 2229 for details). */
-#define true ((_Bool)+1)
-#define false ((_Bool)+0)
+#if __STDC_VERSION_STDBOOL_H__ < 202311L
+
+#define true 1
+#define false 0
 
 #define bool _Bool
+
+#endif
+
 #define __bool_true_false_are_defined 1
 
 #endif
