@@ -3,7 +3,11 @@
 	* device/include/assert.h,
 	  device/include/ctype.h,
 	  device/include/limits.h,
-	  device/include/stdarg.h:
+	  device/include/stdarg.h,
+	  device/include/stdbool.h,
+	  device/include/stddef.h,
+	  device/include/stdlib.h,
+	  device/include/uchar.h:
 	  Replace include guards by C23 header version macros.
 
 2022-09-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
